# IoT5506

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  docker-start.sh  mask_sensitive_data.py
.github/workflows/: create-branch.yml
backend/: .env  db.sqlite3  pyproject.toml
backend/app/: backends.py  models.py  serializers.py  upload_handlers.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py  0002_emailverificationcode.py  0002_image_sensordata.py  0003_user_mail_alert.py  0004_alter_user_mail_alert.py  0005_threshold.py  0006_alter_threshold_gas_concentration_and_more.py  0007_sensordata_last_alert_sent.py  0008_remove_sensordata_last_alert_sent_and_more.py  0009_imageprediction.py  0010_imageprediction_food_imageprediction_freshness.py
backend/backend/: settings.py  urls.py
backend/model/: model_main.py
docker/backend/: Dockerfile  entrypoint.sh
docker/frontend/: Dockerfile  entrypoint.sh  nginx.conf
frontend/: .env  .prettierrc.cjs  components.json  index.html  package-lock.json  package.json  particlesjs-config.json  postcss.config.mjs  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/libs/: api.js  authProvider.jsx  checkRegistered.js  checkUnique.js  emailRegex.js  protectedRoute.jsx  regex.js
frontend/src/pages/: dashboard.jsx  login.jsx  setting.jsx  signup.jsx
frontend/src/styles/: dashboard.css  divide.css  globals.css  login.css  progressbar.css  signup.css  (+2 more)
hardware/banana01/: banana01.ino
hardware/blynk_esp32_bme280/: blynk_esp32_bme280.ino
hardware/camera_test/: camera_test.ino
hardware/test/: test.ino
(+20 files in other folders)
