[tool.poetry]
name = "backend"
version = "0.1.0"
description = "IoT_project"
authors = ["Seikasahara"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
freezegun = "^1.5.1"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
drf-yasg = "^1.21.7"
setuptools = "^70.2.0"
pillow = "^10.4.0"
djangorestframework-simplejwt = "^5.3.1"
#opencv-python = "^4.5.3"
torch = "^2.4.0"
torchvision = "^0.19.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
flake8 = "6.1.0"
flake8-django = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"