[tool.poetry]
name = "backend"
version = "0.1.0"
description = "IoT_project"
authors = ["Seikasahara"]

[tool.poetry.dependencies]
python = "^3.10.11"
Django = "^4.2.5"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.8"}
freezegun = "^1.2.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
drf-yasg = "^1.20.0"
setuptools = "^65.5.0"
pillow = "^9.2.0"
djangorestframework-simplejwt = "^5.2.2"
opencv-python = "^4.8.0"
numpy = "<2.0.0"
#torch = "^1.12.1"
#torchvision = "==0.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
flake8 = "^5.0.4"
flake8-django = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
